--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
             />
           </p>
           <p class="teammember__description">
-            <i class="fa-solid fa-quote-right"></i>Rakib är vår vassaste node-utvecklare och
-            håller ständigt ett öga på nya tekniker
+            <i class="fa-solid fa-quote-right"></i>Rakib är vår vassaste
+            node-utvecklare och håller ständigt ett öga på nya tekniker
           </p>
         </article>
         <article class="teammember">
@@ -71,8 +71,8 @@
             />
           </p>
           <p class="teammember__description">
-            <i class="fa-solid fa-quote-right"></i></i>Alexandra håller koll på alla över allt
-            och ser till att det flyter
+            <i class="fa-solid fa-quote-right"></i>Alexandra håller koll på alla
+            över allt och ser till att det flyter
           </p>
         </article>
         <article class="teammember">
@@ -85,7 +85,7 @@
             />
           </p>
           <p class="teammember__description">
-            <i class="fa-solid fa-quote-right"></i></i>Gör övriga saker...mestadels
+            <i class="fa-solid fa-quote-right"></i>Gör övriga saker...mestadels
           </p>
         </article>
         <article class="teammember">
